--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,7 +7,71 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="Main-Container">
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+    </div>
     
 </body>
+
 </html>
