--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="Main-Container">
+    <div class="main-container">
         <div class="card">
             <h2 class="card title">placeholder
                 <img src="" alt="">
