--- a/index.html
+++ b/index.html
@@ -10,68 +10,63 @@
 
 <body>
     <div class="main-container">
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
+        <div class="main-container section-1">
+            <div class="card row-1">
+                <h2 class="card title">placeholder
+                    <img src="" alt="">
+                </h2>
+            </div>
+        <br />
+            <div class="card row-2">
+                <h2 class="card title">placeholder
+                    <img src="" alt="">
+                </h2>
+            </div>
+        <br />
+            <div class="card row-3">
+                <h2 class="card title">placeholder
+                    <img src="" alt="">
+                </h2>
+            </div>
         </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
+    <br />
+        <div class="main-container section-2">
+            <div class="card">
+                <h2 class="card title">placeholder
+                    <img src="" alt="">
+                </h2>
+            </div>
+            <div class="card">
+                <h2 class="card title">placeholder
+                    <img src="" alt="">
+                </h2>
+            </div>
+            <div class="card">
+                <h2 class="card title">placeholder
+                    <img src="" alt="">
+                </h2>
+            </div>
         </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
+    <br />
+        <div class="main-container section-3">
+            <div class="card">
+                <h2 class="card title">placeholder
+                    <img src="" alt="">
+                </h2>
+            </div>
+            <div class="card">
+                <h2 class="card title">placeholder
+                    <img src="" alt="">
+                </h2>
+            </div>
+            <div class="card">
+                <h2 class="card title">placeholder
+                    <img src="" alt="">
+                </h2>
+            </div>
         </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
-        </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
-        </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
-        </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
-        </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
-        </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
-        </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
-        </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
-        </div>
-        <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
-            </h2>
-        </div>
-    </div>
-    
+       </div>
+
 </body>
 
 </html>
