--- a/index.html
+++ b/index.html
@@ -6,66 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&family=Mooli&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="main-container">
-        <div class="main-container section-1">
-            <div class="card row-1">
-                <h2 class="card title">placeholder
-                    <img src="" alt="">
-                </h2>
-            </div>
-        <br />
-            <div class="card row-2">
-                <h2 class="card title">placeholder
-                    <img src="" alt="">
-                </h2>
-            </div>
-        <br />
-            <div class="card row-3">
-                <h2 class="card title">placeholder
-                    <img src="" alt="">
-                </h2>
-            </div>
+    <header>
+        <img src="bladeemugshot.jpg" alt="bladeemugshot" width="200px" height="auto">
+    </header>
+    <section class="main-container section-1">
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
         </div>
-    <br />
-        <div class="main-container section-2">
-            <div class="card">
-                <h2 class="card title">placeholder
-                    <img src="" alt="">
-                </h2>
-            </div>
-            <div class="card">
-                <h2 class="card title">placeholder
-                    <img src="" alt="">
-                </h2>
-            </div>
-            <div class="card">
-                <h2 class="card title">placeholder
-                    <img src="" alt="">
-                </h2>
-            </div>
+
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
         </div>
-    <br />
-        <div class="main-container section-3">
-            <div class="card">
-                <h2 class="card title">placeholder
-                    <img src="" alt="">
-                </h2>
-            </div>
-            <div class="card">
-                <h2 class="card title">placeholder
-                    <img src="" alt="">
-                </h2>
-            </div>
-            <div class="card">
-                <h2 class="card title">placeholder
-                    <img src="" alt="">
-                </h2>
-            </div>
+
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
         </div>
-       </div>
+
+    </section>
+    <div class="main-container section-2">
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+    </div>
+    <div class="main-container section-3">
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">placeholder
+                <img src="" alt="">
+            </h2>
+        </div>
+    </div>
 
 </body>
 
