--- a/index.html
+++ b/index.html
@@ -13,42 +13,43 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <img src="bladeemugshot.jpg" alt="bladeemugshot" width="200px" height="auto">
+        <h1>Bladee Album Covers</h1>
     </header>
     <section class="main-container section-1">
         <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
+            <h2 class="card title">
+                <img src="gluee.jpg" alt="gluee" width="150px" height="auto">
             </h2>
         </div>
 
         <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
+            <h2 class="card title">
+                <img src="Bladee_Eversince.jpg" alt="Bladee_Eversince" width="150px" height="auto">
             </h2>
         </div>
 
         <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
+            <h2 class="card title">
+                <img src="AVPBLADEE.jpg" alt="AVPBLADEE" width="150px" height="auto">
             </h2>
         </div>
 
     </section>
     <div class="main-container section-2">
         <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
+            <h2 class="card title">
+                <img src="wodbladee.jpg" alt="wodbladee" width="150px" height="auto">
             </h2>
         </div>
         <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
+            <h2 class="card title">
+                <img src="Bladee-red-light.jpg" alt="Bladee-red-light" width="150px" height="auto">
             </h2>
         </div>
         <div class="card">
-            <h2 class="card title">placeholder
+            <h2 class="card title">
                 <img src="" alt="">
             </h2>
         </div>
