--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <img src="bladeemugshot.jpg" alt="bladeemugshot" width="200px" height="auto">
+        <img src="ihaveaweirdamountofbladeepics.jpg" alt="ihaveaweirdamountofbladeepics" width="200px" height="auto">
         <h1>Bladee Album Covers</h1>
     </header>
     <section class="main-container section-1">
@@ -50,24 +50,24 @@
         </div>
         <div class="card">
             <h2 class="card title">
-                <img src="" alt="">
+                <img src="Icedancer.webp" alt="Icedancer" width="150px" height="auto">
             </h2>
         </div>
     </div>
     <div class="main-container section-3">
         <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
+            <h2 class="card title">
+                <img src="333bladee.jpg" alt="333bladee" width="150px" height="auto">
             </h2>
         </div>
         <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
+            <h2 class="card title">
+                <img src="THEFOOL.jpg" alt="THEFOOL" width="150px" height="auto">
             </h2>
         </div>
         <div class="card">
-            <h2 class="card title">placeholder
-                <img src="" alt="">
+            <h2 class="card title">
+                <img src="crestbladee.png" alt="crestbladee" width="150px" height="auto">
             </h2>
         </div>
     </div>
