--- a/index.html
+++ b/index.html
@@ -71,7 +71,21 @@
             </h2>
         </div>
     </div>
-
+    <div class="main-container section-4">
+        <div class="card">
+            <h2 class="card title">
+                <img src="333bladee.jpg" alt="333bladee" width="150px" height="auto">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">
+                <img src="THEFOOL.jpg" alt="THEFOOL" width="150px" height="auto">
+            </h2>
+        </div>
+        <div class="card">
+            <h2 class="card title">
+                <img src="crestbladee.png" alt="crestbladee" width="150px" height="auto">
+            </h2>
 </body>
 
 </html>
