--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="main-container section-1">
         <div class="card">
             <h2 class="card title">
-                <img src="gluee.jpg" alt="gluee" width="150px" height="auto">
+                <p><a href=""></a></p><img src="gluee.jpg" alt="gluee" width="150px" height="auto">
             </h2>
         </div>
 
