--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <section class="main-container section-1">
         <div class="card">
             <h2 class="card title">
-                <p><a href=""></a></p><img src="gluee.jpg" alt="gluee" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/1pBLLI9jbR05lCW8mKBiAP?si=Zw4sVBcaTE-NJRI6xwRd5g"><img src="gluee.jpg" alt="gluee" width="150px" height="auto"></a></p>
             </h2>
         </div>
 
         <div class="card">
             <h2 class="card title">
-                <img src="Bladee_Eversince.jpg" alt="Bladee_Eversince" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/0ZyoyTZbl3g0IwkNlpg633?si=72OPw9VsQlWVt3sDEtozUA"><img src="Bladee_Eversince.jpg" alt="Bladee_Eversince" width="150px" height="auto"></a></p>
             </h2>
         </div>
 
         <div class="card">
             <h2 class="card title">
-                <img src="AVPBLADEE.jpg" alt="AVPBLADEE" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/1izV69He2Zy4xaNnhtm4PJ?si=RBysq2WQSXW8hD8fquc4UQ"><img src="AVPBLADEE.jpg" alt="AVPBLADEE" width="150px" height="auto"></a></p>
             </h2>
         </div>
 
@@ -40,7 +40,7 @@
     <div class="main-container section-2">
         <div class="card">
             <h2 class="card title">
-                <img src="wodbladee.jpg" alt="wodbladee" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/0kJ6BPe0ucJGaGvcVxvmjR?si=p4zQ-z-aRkiQcEtiYPIR1w"><img src="wodbladee.jpg" alt="wodbladee" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card">
