--- a/index.html
+++ b/index.html
@@ -45,46 +45,46 @@
         </div>
         <div class="card">
             <h2 class="card title">
-                <img src="Bladee-red-light.jpg" alt="Bladee-red-light" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/0NCLTcIG4kbORFysmf56BW?si=AzJQQAsMQj-TMlh2EVfd1Q"><img src="Bladee-red-light.jpg" alt="Bladee-red-light" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card">
             <h2 class="card title">
-                <img src="Icedancer.webp" alt="Icedancer" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/0cT1SQDE7wSh1eUJkGFXse?si=9m-4M6I5R32wV6olcsWVGw"><img src="Icedancer.webp" alt="Icedancer" width="150px" height="auto"></a></p>
             </h2>
         </div>
     </div>
     <div class="main-container section-3">
         <div class="card">
             <h2 class="card title">
-                <img src="333bladee.jpg" alt="333bladee" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/38grabLpTHYySHEyG0TyUN?si=QeX3qi5nRVuGPFxsHPEOBg"><img src="333bladee.jpg" alt="333bladee" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card">
             <h2 class="card title">
-                <img src="THEFOOL.jpg" alt="THEFOOL" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/4n1tg05JN5EY0k7FRRcAir?si=q3zUrzUtQt2KrIsNNnWxVg"><img src="THEFOOL.jpg" alt="THEFOOL" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card">
             <h2 class="card title">
-                <img src="crestbladee.png" alt="crestbladee" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/3j75sKW2Lw9gUEhjNzPKn4?si=WPid_YnzTkq_t8qn51fVGA"><img src="crestbladee.png" alt="crestbladee" width="150px" height="auto"></a></p>
             </h2>
         </div>
     </div>
     <div class="main-container section-4">
         <div class="card">
             <h2 class="card title">
-                <img src="333bladee.jpg" alt="333bladee" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/59VjMEiXIOpzLAMAHrLlfj?si=QwCCvsC6TGOCshFM3-gdJw"><img src="bladeespiderr.jpg" alt="bladeespiderr" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card">
             <h2 class="card title">
-                <img src="THEFOOL.jpg" alt="THEFOOL" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/2mygaVOnVsDZykKbiWQK1K?si=dYElqwbXT92G8zTyx7AC9Q"><img src="bladeed&g.jpg" alt="bladeedg" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card">
             <h2 class="card title">
-                <img src="crestbladee.png" alt="crestbladee" width="150px" height="auto">
+                <p><a href="https://open.spotify.com/album/30zy3JHuDxZbBWGf8rGZGX?si=dZvxfxenQdqCcq-xoRLUFg"><img src="bladeetrashisland.jpg" alt="bladeetrashisland" width="150px" height="auto"></a></p>
             </h2>
 </body>
 
