--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <h2 class="card title">
                 <p><a href="https://open.spotify.com/album/30zy3JHuDxZbBWGf8rGZGX?si=dZvxfxenQdqCcq-xoRLUFg"><img src="bladeetrashisland.jpg" alt="bladeetrashisland" width="150px" height="auto"></a></p>
             </h2>
+        </div>
 </body>
 
 </html>
