--- a/index.html
+++ b/index.html
@@ -17,76 +17,82 @@
         <img src="ihaveaweirdamountofbladeepics.jpg" alt="ihaveaweirdamountofbladeepics" width="200px" height="auto">
         <h1>Bladee Album Covers</h1>
     </header>
-    <section class="main-container section-1">
+    <div class="main-container">
         <div class="card card1">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/1pBLLI9jbR05lCW8mKBiAP?si=Zw4sVBcaTE-NJRI6xwRd5g"><img src="gluee.jpg" alt="gluee" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/1pBLLI9jbR05lCW8mKBiAP?si=Zw4sVBcaTE-NJRI6xwRd5g"><img
+                            src="gluee.jpg" alt="gluee" width="150px" height="auto"></a></p>
             </h2>
         </div>
 
         <div class="card card2">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/0ZyoyTZbl3g0IwkNlpg633?si=72OPw9VsQlWVt3sDEtozUA"><img src="Bladee_Eversince.jpg" alt="Bladee_Eversince" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/0ZyoyTZbl3g0IwkNlpg633?si=72OPw9VsQlWVt3sDEtozUA"><img
+                            src="Bladee_Eversince.jpg" alt="Bladee_Eversince" width="150px" height="auto"></a></p>
             </h2>
         </div>
 
         <div class="card card3">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/1izV69He2Zy4xaNnhtm4PJ?si=RBysq2WQSXW8hD8fquc4UQ"><img src="AVPBLADEE.jpg" alt="AVPBLADEE" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/1izV69He2Zy4xaNnhtm4PJ?si=RBysq2WQSXW8hD8fquc4UQ"><img
+                            src="AVPBLADEE.jpg" alt="AVPBLADEE" width="150px" height="auto"></a></p>
             </h2>
         </div>
-
-    </section>
-    <div class="main-container section-2">
         <div class="card card4">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/0kJ6BPe0ucJGaGvcVxvmjR?si=p4zQ-z-aRkiQcEtiYPIR1w"><img src="wodbladee.jpg" alt="wodbladee" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/0kJ6BPe0ucJGaGvcVxvmjR?si=p4zQ-z-aRkiQcEtiYPIR1w"><img
+                            src="wodbladee.jpg" alt="wodbladee" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card card5">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/0NCLTcIG4kbORFysmf56BW?si=AzJQQAsMQj-TMlh2EVfd1Q"><img src="Bladee-red-light.jpg" alt="Bladee-red-light" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/0NCLTcIG4kbORFysmf56BW?si=AzJQQAsMQj-TMlh2EVfd1Q"><img
+                            src="Bladee-red-light.jpg" alt="Bladee-red-light" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card card6">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/0cT1SQDE7wSh1eUJkGFXse?si=9m-4M6I5R32wV6olcsWVGw"><img src="Icedancer.webp" alt="Icedancer" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/0cT1SQDE7wSh1eUJkGFXse?si=9m-4M6I5R32wV6olcsWVGw"><img
+                            src="Icedancer.webp" alt="Icedancer" width="150px" height="auto"></a></p>
             </h2>
         </div>
-    </div>
-    <div class="main-container section-3">
         <div class="card card7">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/38grabLpTHYySHEyG0TyUN?si=QeX3qi5nRVuGPFxsHPEOBg"><img src="333bladee.jpg" alt="333bladee" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/38grabLpTHYySHEyG0TyUN?si=QeX3qi5nRVuGPFxsHPEOBg"><img
+                            src="333bladee.jpg" alt="333bladee" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card card8">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/4n1tg05JN5EY0k7FRRcAir?si=q3zUrzUtQt2KrIsNNnWxVg"><img src="THEFOOL.jpg" alt="THEFOOL" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/4n1tg05JN5EY0k7FRRcAir?si=q3zUrzUtQt2KrIsNNnWxVg"><img
+                            src="THEFOOL.jpg" alt="THEFOOL" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card card9">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/3j75sKW2Lw9gUEhjNzPKn4?si=WPid_YnzTkq_t8qn51fVGA"><img src="crestbladee.png" alt="crestbladee" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/3j75sKW2Lw9gUEhjNzPKn4?si=WPid_YnzTkq_t8qn51fVGA"><img
+                            src="crestbladee.png" alt="crestbladee" width="150px" height="auto"></a></p>
             </h2>
         </div>
-    </div>
-    <div class="main-container section-4">
         <div class="card card10">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/59VjMEiXIOpzLAMAHrLlfj?si=QwCCvsC6TGOCshFM3-gdJw"><img src="bladeespiderr.jpg" alt="bladeespiderr" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/59VjMEiXIOpzLAMAHrLlfj?si=QwCCvsC6TGOCshFM3-gdJw"><img
+                            src="bladeespiderr.jpg" alt="bladeespiderr" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card card11">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/2mygaVOnVsDZykKbiWQK1K?si=dYElqwbXT92G8zTyx7AC9Q"><img src="bladeed&g.jpg" alt="bladeedg" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/2mygaVOnVsDZykKbiWQK1K?si=dYElqwbXT92G8zTyx7AC9Q"><img
+                            src="bladeed&g.jpg" alt="bladeedg" width="150px" height="auto"></a></p>
             </h2>
         </div>
         <div class="card card12">
             <h2 class="card title">
-                <p><a href="https://open.spotify.com/album/30zy3JHuDxZbBWGf8rGZGX?si=dZvxfxenQdqCcq-xoRLUFg"><img src="bladeetrashisland.jpg" alt="bladeetrashisland" width="150px" height="auto"></a></p>
+                <p><a href="https://open.spotify.com/album/30zy3JHuDxZbBWGf8rGZGX?si=dZvxfxenQdqCcq-xoRLUFg"><img
+                            src="bladeetrashisland.jpg" alt="bladeetrashisland" width="150px" height="auto"></a></p>
             </h2>
         </div>
+    </div>
 </body>
 
 </html>
